# OmniAgent

./: .dockerignore  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile
backend/data/knowledge-base-index/: stamp.json
backend/data/knowledge-base-index/faiss/: index.faiss  index.pkl
backend/src/_tests/: _smoke_all_agent.py  _smoke_test_agent.py  _smoke_test_graph.py  _smoke_test_t_rag.py  _smoke_test_t_web.py
backend/src/agents/: audio_agent.py  doc_agent.py  image_agent.py  kb_rag_agent.py  rag_agent.py  router.py  text_agent.py  vision_agent.py  web_agent.py
backend/src/api/: app.py  routes_assets.py  routes_chat.py  routes_models.py  routes_upload.py
backend/src/core/: config.py  constants.py  jsonx.py  logging.py
backend/src/graph/: ack_node.py  agent_memory.py  context_node.py  critic_plan_node.py  intent_llm_node.py  lanes_node.py  planner_node.py  reflect_node.py  researcher_node.py  role_pack_node.py  runner.py  streaming.py  task_validate_node.py  text_router_node.py  tool_router_node.py  v2_flow.py  writer_plan_node.py
backend/src/llm/: anthropic_llm.py  base.py  factory.py  gemini_llm.py  openai_llm.py
backend/src/schemas/: events.py  plan.py  results.py  state.py  tasks.py
backend/src/session/: store.py
backend/src/stream/: emitter.py  sse.py
backend/src/tools/docs/: doc_tool.py
backend/src/tools/media/: assets.py  image_tool.py  tts_tool.py
backend/src/tools/rag/: auto_index.py  chunker.py  indexer.py  (+4 more)
frontend/omniagent-ui/: Dockerfile  next.config.ts  package-lock.json  package.json
(+12 files in other folders)
