[project]
name = "omniagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.4.0",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.129.0",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.3",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=1.1.10",
    "langchain-tavily>=0.2.17",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.8",
    "numpy>=2.4.2",
    "pypdf>=6.7.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "tavily-python>=0.7.21",
    "uvicorn>=0.41.0",
    "wikipedia>=1.4.0",
]
